@@ -1,6 +1,6 @@
 # Lints CMake config and C++ source code.
 
-name: "Lint source code"
+name: "Lint (Clang)"
 
 on:
   workflow_dispatch:
@@ -12,7 +12,7 @@ on:
       - ready_for_review
 
 jobs:
-  lint-source-code:
+  lint-clang:
     runs-on: ubuntu-latest
     timeout-minutes: 5
 
@@ -23,15 +23,17 @@ jobs:
       - name: Setup Python venv
         uses: ./.github/actions/init-python
         with:
-          cache-key: "lint-source-code"
+          cache-key: "lint-clang"
 
       - name: Install dependencies
         run: |
           source .venv/bin/activate
-          pip install pyyaml cmake_format clang_format
-
-      - name: Linting with CMake formatter
-        run: ./scripts/lint_cmake.py
+          pip install pyyaml clang_format
 
       - name: Linting with Clang format
-        run: ./scripts/lint_clang.py
+        id: lint-clang
+        uses: ./.github/actions/lint-error
+        with:
+          format-command: ./scripts/lint_clang.py -f
+          format-tool: "clang-format"
+          comment-header: "lint-clang"
