@@ -11,6 +11,7 @@ Enhancements:
 
 - #7519 Rename project to Deskflow (was Synergy Community Edition)
 - #7533 Always upgrade packages on Arch Linux in deps script
+- #7539 Lint and add comment to PR on lint failure
 
 # 1.16.1
 
